src/objects/Training_Session__c.object
<CustomObject>
    <fields>
        <fullName>Average_Rating__c</fullName>
        <formula>Rating_Sum__c  /  Count_Feedback__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Rating</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_Feedback__c</fullName>
        <label>Count Feedback</label>
        <summaryForeignKey>Feedback__c.Session__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Attendees__c</fullName>
        <label>No. of Attendees</label>
        <summaryForeignKey>Attendee__c.Session__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Rating_Sum__c</fullName>
        <label>Rating Sum</label>
        <summarizedField>Feedback__c.Rating__c</summarizedField>
        <summaryForeignKey>Feedback__c.Session__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Session_Date__c</fullName>
        <label>Session Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Session_Type__c</fullName>
        <label>Session Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Webinar</fullName>
                </value>
                <value>
                    <fullName>Workshop</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Webinar_Link__c</fullName>
        <label>Webinar Link</label>
        <type>Url</type>
    </fields>
    <label>Training Session</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TS-{0000}</displayFormat>
        <label>Training Session ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Sessions</pluralLabel>
    <recordTypes>
        <fullName>Webinar</fullName>
        <active>true</active>
        <label>Webinar</label>
    </recordTypes>
    <recordTypes>
        <fullName>Workshop</fullName>
        <active>true</active>
        <label>Workshop</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Location_Val</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISBLANK(  Location__c ),  NOT($Setup.Bypass_Logic__c.Bypass_Validation_Rules__c)  )</errorConditionFormula>
        <errorDisplayField>Location__c</errorDisplayField>
        <errorMessage>Location Required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Session_date_Today_onwads_only</fullName>
        <active>true</active>
        <errorConditionFormula>Session_Date__c  &lt;  TODAY()</errorConditionFormula>
        <errorDisplayField>Session_Date__c</errorDisplayField>
        <errorMessage>Select Session Date Today Onwards only.</errorMessage>
    </validationRules>
</CustomObject>